[gd_scene load_steps=12 format=3 uid="uid://6kbjpm4uk0ud"]

[ext_resource type="Script" path="res://scene.gd" id="1_on2og"]
[ext_resource type="Script" path="res://palette_viewer.gd" id="2_fd1k4"]
[ext_resource type="PackedScene" uid="uid://dvystywqve7h8" path="res://planes/plane.tscn" id="3_kr2vw"]
[ext_resource type="Script" path="res://back_buffer_copy.gd" id="6_44h1i"]
[ext_resource type="Script" path="res://api/engines/engine.gd" id="7_vheq0"]
[ext_resource type="Script" path="res://api/resource_pool.gd" id="8_470xv"]
[ext_resource type="Script" path="res://hardware/vram.gd" id="9_3hdhi"]
[ext_resource type="Script" path="res://layers/blocks/block_sets.gd" id="9_fvj5h"]
[ext_resource type="Script" path="res://layers/chunks/chunk_sets.gd" id="10_k6bur"]
[ext_resource type="Script" path="res://hardware/palette.gd" id="10_qjsrd"]

[sub_resource type="GDScript" id="GDScript_r6ob0"]
script/source = "extends Sprite2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="Scene" type="Node2D"]
script = ExtResource("1_on2og")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HardwareContainer" type="SubViewportContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 10
stretch = true

[node name="HardwareViewport" type="SubViewport" parent="CanvasLayer/HardwareContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="CanvasLayer/HardwareContainer/HardwareViewport"]

[node name="PaletteView" type="Sprite2D" parent="CanvasLayer/HardwareContainer/HardwareViewport"]
visible = false
texture_filter = 1
position = Vector2(150, 150)
script = ExtResource("2_fd1k4")

[node name="VRAMView" type="Sprite2D" parent="CanvasLayer/HardwareContainer/HardwareViewport"]
visible = false
texture_filter = 1
position = Vector2(300, 200)
scale = Vector2(4, 4)
region_enabled = true
region_rect = Rect2(0, 0, 32, 8)
script = SubResource("GDScript_r6ob0")

[node name="BG" parent="CanvasLayer/HardwareContainer/HardwareViewport" instance=ExtResource("3_kr2vw")]
texture_filter = 2

[node name="FG" parent="CanvasLayer/HardwareContainer/HardwareViewport" instance=ExtResource("3_kr2vw")]
texture_filter = 2

[node name="BackBufferCopy" type="BackBufferCopy" parent="CanvasLayer/HardwareContainer/HardwareViewport"]
texture_filter = 1
copy_mode = 2
rect = Rect2(0, 0, 0, 0)
script = ExtResource("6_44h1i")

[node name="Paletter" type="ColorRect" parent="CanvasLayer/HardwareContainer/HardwareViewport/BackBufferCopy"]
texture_filter = 1
texture_repeat = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Engine" type="Node" parent="."]
script = ExtResource("7_vheq0")

[node name="Resources" type="Node" parent="."]
script = ExtResource("8_470xv")

[node name="Hardware" type="Node" parent="."]

[node name="VRAM" type="Node" parent="Hardware"]
script = ExtResource("9_3hdhi")

[node name="Palette" type="Node" parent="Hardware"]
script = ExtResource("10_qjsrd")

[node name="BlockSets" type="Node" parent="."]
script = ExtResource("9_fvj5h")

[node name="ChunkSets" type="Node" parent="."]
script = ExtResource("10_k6bur")
